--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -23,7 +23,8 @@
     </head>
     <body>
         <header class="site-header">
-            <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+            <nav
+                class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
                 <div class="container">
                     <a class="navbar-brand mr-4"
                         href="{{url_for('index')}}">NDU ReportLab</a>
@@ -44,7 +45,10 @@
                         <div class="navbar-nav">
                             {% if current_user.is_authenticated %}
                             <a class="nav-item nav-link"
+                                href="{{url_for('account')}}">Account</a>
+                            <a class="nav-item nav-link"
                                 href="{{url_for('logout')}}">Logout</a>
+
                             {% else %}
                             <a class="nav-item nav-link"
                                 href="{{url_for('login')}}">Login</a>
@@ -58,7 +62,7 @@
         </header>
         <main role="main" class="container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     {% with messages =
                     get_flashed_messages(with_categories=true) %}
                     {% if messages %}
@@ -71,7 +75,7 @@
                     {% endwith %}
                     {% block content %}{% endblock %}
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <div class="content-section">
                         <h3>Our Sidebar</h3>
                         <p class='text-muted'>You can put any information here
@@ -89,7 +93,7 @@
                             </ul>
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
         <!-- Optional JavaScript -->
