--- a/flasktest/templates/home.html
+++ b/flasktest/templates/home.html
@@ -33,7 +33,12 @@
 
                     </td>
                     <td>{{row[7]}}</td>
-                    <td>{{row[8]}}</td>
+                    <td><form action method="POST">
+                            <input type="hidden" name="number"
+                                value="{{row[8]}}">
+                            <button type="submit">{{row[8]}}</button>
+                        </form>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
