--- a/flasktest/templates/home.html
+++ b/flasktest/templates/home.html
@@ -33,10 +33,11 @@
 
                     </td>
                     <td>{{row[7]}}</td>
-                    <td><form action method="POST">
+                    <td><form action method="POST" target="_blank">
                             <input type="hidden" name="number"
                                 value="{{row[8]}}">
-                            <button type="submit">{{row[8]}}</button>
+                            <button class="btn"
+                                type="submit">{{row[8]}}</button>
                         </form>
                     </td>
                 </tr>
