--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -11,6 +11,10 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
             crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+            crossorigin="anonymous">
 
         <link rel="stylesheet" type="text/css"
             href="{{ url_for('static', filename='main.css')  }}">
@@ -33,15 +37,15 @@
             src="{{ url_for('static', filename='js/plugins/toastr.min.js')  }}"></script>
 
         {% if title %}
-        <title>Flask - {{title}}</title>
+        <title>NDU ReportLab - {{title}}</title>
         {% else %}
-        <title>Flask Blog</title>
+        <title>NDU ReportLab</title>
         {% endif %}
     </head>
     <body>
         <header class="site-header">
             <nav
-                class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+                class="navbar navbar-nav navbar-expand-md navbar-dark bg-primary fixed-top">
                 <div class="container">
                     <a class="navbar-brand mr-4"
                         href="{{url_for('index')}}">NDU ReportLab</a>
@@ -53,18 +57,40 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
-                            <a class="nav-item nav-link"
-                                href="{{url_for('index')}}">Home</a>
-                            <a class="nav-item nav-link"
-                                href="{{url_for('about')}}">About</a>
+
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#"
+                                        id="navbarDropdown" role="button"
+                                        data-toggle="dropdown"
+                                        aria-haspopup="true"
+                                        aria-expanded="false">
+                                        Hesabatlar
+                                    </a>
+
+                                    <div class="dropdown-menu"
+                                        aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item"
+                                            href="{{url_for('contingent')}}">Kontingent</a>
+                                        <!-- <a class="dropdown-item"
+                                            href="#">Another
+                                            action</a>
+
+                                        <a class="dropdown-item"
+                                            href="#">Something
+                                            else
+                                            here</a> -->
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <!-- Navbar Right Side -->
+
                         <div class="navbar-nav">
                             {% if current_user.is_authenticated %}
                             <a class="nav-item nav-link"
-                                href="{{url_for('account')}}">Account</a>
+                                href="{{url_for('account')}}">Hesab</a>
                             <a class="nav-item nav-link"
-                                href="{{url_for('logout')}}">Logout</a>
+                                href="{{url_for('logout')}}">Çıxış</a>
 
                             {% else %}
                             <a class="nav-item nav-link"
@@ -77,6 +103,7 @@
                 </div>
             </nav>
         </header>
+
         <main role="main" class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -115,43 +142,19 @@
         </main>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-        <script
-            src="{{ url_for('static', filename='js/plugins/jquery-3.3.1.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/plugins/bootstrap.bundle.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='s/plugins/perfect-scrollbar.min.js')  }}j"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/tooltip.script.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/script.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/script_2.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/sidebar.large.script.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/plugins/feather.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/plugins/metisMenu.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/layout-sidebar-vertical.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/plugins/echarts.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/echart.options.min.js')  }}"></script>
-        <script
-            src="{{ url_for('static', filename='js/scripts/dashboard.v1.script.min.js')  }}"></script>
+
         <script
             src="{{ url_for('static', filename='js/plugins/datatables.min.js')  }}"></script>
         <script
