--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -36,6 +36,9 @@
         <script
             src="{{ url_for('static', filename='js/plugins/toastr.min.js')  }}"></script>
 
+        <link rel="icon"
+            href="{{url_for('static', filename='img/logo_ndu_128.ico')}}"
+            type="image/x-icon" />
         {% if title %}
         <title>NDU ReportLab - {{title}}</title>
         {% else %}
@@ -47,7 +50,14 @@
             <nav
                 class="navbar navbar-nav navbar-expand-md navbar-dark bg-primary fixed-top">
                 <div class="container">
-                    <a class="navbar-brand mr-4"
+                    <!-- <img
+                        src="https://ndu.edu.az/wp-content/uploads/2014/10/logo_az-1.png"
+                        alt="Naxçıvan Dövlət Universiteti" height="50px"> -->
+                    <img
+                        src="{{url_for('static', filename='img/logo200x200.png')}}"
+                        alt="Naxçıvan Dövlət Universiteti" height="50px">
+
+                    <a class="navbar-brand mr-4" style="padding-left: 10px;"
                         href="{{url_for('index')}}">NDU ReportLab</a>
                     <button class="navbar-toggler" type="button"
                         data-toggle="collapse" data-target="#navbarToggle"
