--- a/flasktest/templates/home.html
+++ b/flasktest/templates/home.html
@@ -1,49 +1,85 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="card-body">
-    <legend><h3>Kontingent Tələbə hərəkatı</h3></legend>
-    <div class="table-responsive">
-        <table class="display table table-striped "
-            id="zero_configuration_table" style="width:100%">
-            <thead>
-                <tr>
-                    <th scope="col">Fakültə adı</th>
-                    <th scope="col">İxtisas adı</th>
-                    <th scope="col">Kurs</th>
-                    <th scope="col">Tələbə ad</th>
-                    <th scope="col">Kateqori</th>
-                    <th scope="col">Tarix</th>
-                    <th scope="col">Əmr</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in results %}
-                <tr>
-                    <th>{{row[0]}}</th>
-                    <td>{{row[1]}}</td>
-                    <td>{{row[2]}}</td>
-                    <td>{{row[3]}}</td>
-                    <td>
-                        {% if row[4] %}
-                        {{row[4]}}
-                        {% else %}
-                        {{row[5]}}
-                        {% endif %}
+<div class="col-md-12">
+    <div class="card o-hidden mb-4">
+        <div class="card-header d-flex align-items-center">
+            <h3 class="w-50 float-left card-title m-0">Kontingent Tələbə
+                hərəkatı</h3>
+            <div class="dropdown dropleft text-right w-50 float-right">
+                <button class="btn bg-gray-100"
+                    id="dropdownMenuButton_table1"
+                    type="button" data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="16"
+                        height="16" fill="currentColor" class="bi bi-gear"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0" />
+                        <path
+                            d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z" />
+                    </svg>
+                </button>
+                <div class="dropdown-menu"
+                    aria-labelledby="dropdownMenuButton_table1"><a
+                        class="dropdown-item"
+                        href="{{url_for('index')}}?export=True">Çap et</a>
+                </div>
+            </div>
 
-                    </td>
-                    <td>{{row[6]}}</td>
-                    <td><form action method="POST" target="_blank">
-                            <input type="hidden" name="number"
-                                value="{{row[9]}}">
-                            <button class="btn"
-                                type="submit">{{row[7]}}</button>
-                        </form>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        </div>
+
+        <div class="card-body">
+
+            <div class="table-responsive">
+                <table class="display table table-striped "
+                    id="zero_configuration_table" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th scope="col">Fakültə adı</th>
+                            <th scope="col">İxtisas adı</th>
+                            <th scope="col">Kurs</th>
+                            <th scope="col">Tələbə ad</th>
+                            <th scope="col">Kateqori</th>
+                            <th scope="col">Tarix</th>
+                            <th scope="col">Əmr</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in results %}
+                        {% if current_user.faculty_id == 0 or
+                        current_user.faculty_id ==
+                        row[10] %}
+                        <tr>
+                            <th>{{row[0]}}</th>
+                            <td>{{row[1]}}</td>
+                            <td>{{row[2]}}</td>
+                            <td>{{row[3]}}</td>
+                            <td>
+                                {% if row[4] %}
+                                {{row[4]}}
+                                {% else %}
+                                {{row[5]}}
+                                {% endif %}
+
+                            </td>
+                            <td>{{row[6]}}</td>
+                            <td><form action method="POST" target="_blank">
+                                    <input type="hidden" name="number"
+                                        value="{{row[9]}}">
+                                    <button class="btn"
+                                        type="submit">{{row[7]}}</button>
+                                </form>
+                            </td>
+                        </tr>
+                        {% endif %}
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
+
 {% endblock content %}
