--- a/flasktest/templates/login2.html
+++ b/flasktest/templates/login2.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
     <head>
-        <title>Login</title>
+        <title>NDU Kontingent</title>
         <meta charset="utf-8">
         <meta name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <link rel="icon"
+            href="{{url_for('static', filename='img/logo_ndu_128.ico')}}"
+            type="image/x-icon" />
         <link
             href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
             rel="stylesheet">
@@ -23,18 +26,13 @@
         <section class="ftco-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-md-6 text-center mb-5">
-                        <h2 class="heading-section">Login #01</h2>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
                     <div class="col-md-7 col-lg-5">
                         <div class="login-wrap p-4 p-md-5">
                             <div
                                 class="icon d-flex align-items-center justify-content-center">
                                 <span class="fa fa-user-o"></span>
                             </div>
-                            <h3 class="text-center mb-4">Sign In</h3>
+                            <h3 class="text-center mb-4">Login</h3>
                             <div class="justify-content-center">
                                 {% with messages =
                                 get_flashed_messages(with_categories=true) %}
