--- a/flasktest/templates/register.html
+++ b/flasktest/templates/register.html
@@ -5,7 +5,6 @@
     <form method="POST" action>
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
             <div class="form-group">
                 {{form.username.label(class="form-control-label")}}
                 {% if form.username.errors %}
@@ -58,6 +57,10 @@
                 {% else %}
                 {{form.confirm_password(class="form-control form-control-lg")}}
                 {% endif %}
+            </div>
+            <div class="form-group">
+                {{form.faculty_name.label(class="form-control-label")}}
+                {{form.faculty_name(**{"class": "form-control"} )}}
             </div>
         </fieldset>
         <div class="form-group">
