--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -81,7 +81,9 @@
                                     <div class="dropdown-menu"
                                         aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item"
-                                            href="{{url_for('contingent_vew')}}">Kontingent</a>
+                                            href="{{url_for('contingent_view')}}">Kontingent</a>
+                                        <a class="dropdown-item"
+                                            href="{{url_for('students_view')}}">Tələbələr</a>
                                         <!-- <a class="dropdown-item"
                                             href="#">Another
                                             action</a>
