--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -58,7 +58,7 @@
                         alt="Naxçıvan Dövlət Universiteti" height="50px">
 
                     <a class="navbar-brand mr-4" style="padding-left: 10px;"
-                        href="{{url_for('index')}}">NDU ReportLab</a>
+                        href="{{url_for('index')}}">NDU Hesabat</a>
                     <button class="navbar-toggler" type="button"
                         data-toggle="collapse" data-target="#navbarToggle"
                         aria-controls="navbarToggle" aria-expanded="false"
