--- a/flasktest/templates/edit_account.html
+++ b/flasktest/templates/edit_account.html
@@ -4,14 +4,14 @@
     <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
-            <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
+            <h2 class="account-heading">{{ user.username }}</h2>
+            <p class="text-secondary">{{ user.email }}</p>
         </div>
     </div>
     <form method="POST" action enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Hesab məlumatlarım</legend>
+            <legend class="border-bottom mb-4">Hesab məlumatları</legend>
             <div class="form-group">
                 {{form.username.label(class="form-control-label")}}
                 {% if form.username.errors %}
@@ -64,7 +64,11 @@
         </fieldset>
         <div class="form-group">
             {{form.submit(class="btn btn-outline-info")}}
+        <a class="btn btn-success" href="{{ url_for('users') }}">Geri</a>
+
         </div>
+
+
     </form>
 
 </div>
