--- a/flasktest/templates/student_number.html
+++ b/flasktest/templates/student_number.html
@@ -13,7 +13,13 @@
   </head>
   <body>
     <div class="container">
-    
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <div class="alert alert-success" role="alert">
+                    {{ messages[0][1] }}
+                </div>
+            {% endif %}
+        {% endwith %}
         <form method="POST">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
