--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -106,6 +106,8 @@
                                 href="{{url_for('users')}}">İstifadəçilər</a>
                             {% endif %}
                             <a class="nav-item nav-link"
+                                href="{{url_for('add_student_phone_number')}}">Tələbə qeydiyyat</a>
+                            <a class="nav-item nav-link"
                                 href="{{url_for('account')}}">Hesab</a>
                             <a class="nav-item nav-link"
                                 href="{{url_for('logout')}}">Çıxış</a>
