--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -85,6 +85,8 @@
                                             href="{{url_for('contingent_view')}}">Kontingent</a>
                                         <a class="dropdown-item"
                                             href="{{url_for('students_view')}}">Tələbələr</a>
+                                        <a class="dropdown-item"
+                                            href="{{url_for('ejurnal_view')}}">Ejurnal</a>
                                         <!-- <a class="dropdown-item"
                                             href="#">Another
                                             action</a>
