--- a/flasktest/templates/professions.html
+++ b/flasktest/templates/professions.html
@@ -1,3 +1,4 @@
+<!-- <option value="">---</option> -->
 {% for profession in profession_names %}
 <option value="{{profession[0]}}">{{profession[1]}}</option>
 {% endfor %}
