--- a/flasktest/templates/exams/exams_view.html
+++ b/flasktest/templates/exams/exams_view.html
@@ -76,7 +76,7 @@
                 <div class="dropdown-menu"
                     aria-labelledby="dropdownMenuButton_table1"><a
                         class="dropdown-item"
-                        href="{{url_for('index')}}?export=True">Çap et</a>
+                        href="{{url_for('show_exams')}}?export=True">Çap et</a>
                 </div>
             </div>
 
