--- a/flasktest/templates/student_number2.html
+++ b/flasktest/templates/student_number2.html
@@ -59,6 +59,16 @@
                 <div class="col-md-12">
                     <div class="container">
                         <form method="POST">
+                            {% with messages =
+                                get_flashed_messages(with_categories=true) %}
+                                {% if messages %}
+                                {% for category, message in messages %}
+                                <div class="alert alert-{{category}}">
+                                    {{message}}
+                                </div>
+                                {% endfor %}
+                                {% endif %}
+                                {% endwith %}
                             {{ form.hidden_tag() }}
                             <fieldset class="form-group">
                                 <div class="form-group">
