--- a/flasktest/templates/base.html
+++ b/flasktest/templates/base.html
@@ -11,10 +11,11 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
             crossorigin="anonymous">
-        <link rel="stylesheet"
+        <!-- <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous">
+            crossorigin="anonymous"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
         <link rel="stylesheet" type="text/css"
@@ -144,14 +145,16 @@
         <main role="main" class="container">
             <div class="row">
                 <div class="col-md-12">
-                    {% with messages =
-                    get_flashed_messages(with_categories=true) %}
+                    {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
-                    {% for category, message in messages %}
-                    <div class="alert alert-{{category}}">
-                        {{message}}
+                    <div>
+                        {% for category, message in messages %}
+                        <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
                     {% endif %}
                     {% endwith %}
                     {% block content %}{% endblock %}
@@ -178,6 +181,7 @@
             src="{{ url_for('static', filename='js/plugins/datatables.min.js')  }}"></script>
         <script
             src="{{ url_for('static', filename='js/scripts/datatables.script.min.js')  }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 
         
     </body>
